Simpler resizer for left; dash overflow fixes

--- a/src/assets/scss/_shame.scss
+++ b/src/assets/scss/_shame.scss
@@ -380,3 +380,12 @@ svg:not([height]) {
 .box:not(.overflow) {
   overflow: hidden;
 }
+
+.dashboard {
+  block-size: 100%;
+  padding: var(--ui-chrome-spacing-l);
+
+  .component:has(&) {
+    padding: 0;
+  }
+}
