--- a/src/assets/scss/chrome/_overflow.scss
+++ b/src/assets/scss/chrome/_overflow.scss
@@ -25,9 +25,9 @@
 }
 
 ::-webkit-scrollbar-track {
-  background: transparent;
+  background: inherit;
   border: none;
-  border-radius: 8px;
+  border-radius: 0 px(4) px(4) 0;
 }
 
 ::-webkit-scrollbar-thumb {
